# agentic-file-sorter

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  afs-config.json  afs-lite.py  afs.py  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
afs/: __init__.py  analyze.py  batch_sort.py  cli.py  config.py  consolidate.py  faces.py  hashing.py  naming.py  photo.py  pipeline.py  preview.py  samples.py  sorting.py  types_.py  web_search.py
dashboard/: package-lock.json  package.json  server.js
dashboard/public/: index.html
data/: known-subjects.json
dev-tools/: build-hash-db.py
docs/: agentic-optimization-report.md  demo-script.md  index.html
docs/blueprints/: identification-v2-spec.md  step2-v3-spec.md
tests/: test_pipeline.py
